argo/apps/media/sonarr/ingress.yaml
# apps/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tv.smeyer.ca`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
  tls:
    certResolver: letsencrypt
